# suwayomi-vala

./: .gitignore  README.md  meson.build
data/: es.pablouser1.suwayomi.desktop  es.pablouser1.suwayomi.gschema.xml  gresource.xml  meson.build
data/ui/: home-page.blp  main-window.blp  manga-page.blp  meson.build  preferences-dialog.blp  reader-page.blp
src/: api.vala  app.vala  build.vala.in  cache.vala  datafetch.vala  db.vala  localdb.vala  meson.build
src/enums/: cachetype.vala  meson.build
src/helpers/: meson.build  storage.vala
src/models/: categorytype.vala  chaptertype.vala  mangatype.vala  mangatypebasic.vala  meson.build  tab.vala
src/ui/: home-page.vala  main-window.vala  manga-page.vala  meson.build  preferences-dialog.vala  reader-page.vala
